2013-07-08  Jakub Jelinek  <jakub@redhat.com>

	PR target/57819
	* gcc.target/i386/pr57819.c: New test.

	PR rtl-optimization/57829
	* gcc.c-torture/execute/pr57829.c: New test.

2013-07-08  Michael Zolotukhin  <michael.v.zolotukhin@gmail.com>

	* gcc.target/i386/memcpy-vector_loop-1.c: New.
	* gcc.target/i386/memcpy-vector_loop-2.c: New.

2013-07-06  Uros Bizjak  <ubizjak@gmail.com>

	PR target/57807
	* gcc.target/i386/pr57807.c: New test.

2013-07-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/29776
	* gcc.dg/tree-ssa/vrp89.c: New test.

2013-07-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/28262
	* g++.dg/parse/defarg16.C: New.

2013-07-05  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/55342
	* gcc.target/i386/pr55342.c: New.

2013-07-05  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* gcc.dg/pr57518.c: Adjust scan-rtl-dump-not pattern.

2013-07-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/14263
	* g++.dg/inherit/virtual10.C: New.

2013-07-04  Joern Rennecke <joern.rennecke@embecosm.com>

	PR c/57821
	* gcc.dg/large-size-array-6.c: New test.

2013-07-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/38634
	* g++.dg/template/crash116.C: New.

2013-07-04  Joern Rennecke <joern.rennecke@embecosm.com>

	* gcc.dg/tree-ssa/vrp66.c: Make conditional on { target { ! int16 } } .
	* gcc.dg/tree-ssa/vrp66-int16-sw.c: New test.

2013-07-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54998
	* g++.dg/cpp0x/nsdmi-list3.C: New.

2013-07-03  Jakub Jelinek  <jakub@redhat.com>

	PR target/57777
	* gcc.target/i386/pr57777.c: New test.

	PR c++/57771
	* g++.dg/template/arg9.C: New test.

2013-07-02  Sriraman Tallam  <tmsriram@google.com>

	* gcc.target/i386/avx-inline.c: New test.

2013-07-02  Maciej W. Rozycki  <macro@codesourcery.com>

	* gcc.target/mips/call-1.c: Accept JALRS and JALR.
	* gcc.target/mips/call-2.c: Likewise.
	* gcc.target/mips/call-3.c: Likewise.
	* gcc.target/mips/lazy-binding-1.c: Likewise.
